@@ -366,13 +366,15 @@
 1.46 2013-03-29 rurban
 ----
 
+  * Fix RT #84292 PIPE_PID/waitpid broken in Exec pipe_read since 5.17.6 (rurban)
+
   * Fix RT #84210 Bad NAME in Makefile.PL (miyagawa)
 
   * Fix RT #82687 cpansign MANIFEST failure (myra)
 
   * Work on RT #41285 test failures with non-english locale (reported by srezic)
 
-  * Skip patching the src for newWarnings style, these are the default
+  * Skip patching the src for newWarnings style, these are the default (rurban)
 
   * Fix RT #53132 examples/method/Decompress.pm syntax error (kevin ryde)
     and add usage docs.
